--- a/cmd/health-aggregator/templates/nschecks.html
+++ b/cmd/health-aggregator/templates/nschecks.html
@@ -12,7 +12,11 @@
                 <div class="card border-success m-1">
                 {{end}}
                 {{if eq .State "unhealthy"}}
+                {{if ne .StatusCode "0"}}
                 <div class="card border-danger m-1">
+                {{else}}
+                <div class="card border-light m-1">
+                {{end}}
                 {{end}}
                 {{if eq .State "degraded"}}
                 <div class="card border-warning m-1">
@@ -21,7 +25,12 @@
                     <div class="card-header bg-success border-light" id="heading-{{.Service.Name}}">
                     {{end}}
                     {{if eq .State "unhealthy"}}
+                    {{if ne .StatusCode "0"}}
+                    <div class="card-header bg-danger border-danger" id="heading-{{.Service.Name}}">
+                    {{else}}
                     <div class="card-header bg-danger border-light" id="heading-{{.Service.Name}}">
+                    {{end}}
+                    {{end}}
                     {{end}}
                     {{if eq .State "degraded"}}
                     <div class="card-header bg-warning border-light" id="heading-{{.Service.Name}}">
