--- a/cmd/health-aggregator/templates/nschecks.html
+++ b/cmd/health-aggregator/templates/nschecks.html
@@ -3,7 +3,9 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>    </head>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script src="https://use.fontawesome.com/2390d22bcf.js"></script>
+    </head>
     <body>
         <div class="container-fluid d-flex flex-wrap">
             {{range .Checks}}
@@ -22,22 +24,38 @@
                 <div class="card border-warning m-1">
                 {{end}}
                     {{if eq .State "healthy"}}
-                    <div class="card-header bg-success border-light" id="heading-{{.Service.Name}}">
+                    <div class="card-header bg-success border-success" id="heading-{{.Service.Name}}">
+                        <h5 class="m-0">
+                            <button class="btn btn-link text-white font-weight-bold pl-0 pr-0" style="overflow: hidden;text-overflow: ellipsis;max-width: 93%;" data-toggle="collapse" data-target="#collapse-{{.Service.Name}}" aria-expanded="true" aria-controls="collapse-{{.Service.Name}}">
+                                {{.Service.Name}}
+                            </button>
+                            <i class="fa fa-check text-white" style="float: right;line-height: 1.8;" aria-hidden="true"></i>
                     {{end}}
                     {{if eq .State "unhealthy"}}
                     {{if ne .StatusCode 0}}
                     <div class="card-header bg-danger border-danger" id="heading-{{.Service.Name}}">
+                        <h5 class="m-0">
+                            <button class="btn btn-link text-white font-weight-bold pl-0 pr-0" style="overflow: hidden;text-overflow: ellipsis;max-width: 93%;" data-toggle="collapse" data-target="#collapse-{{.Service.Name}}" aria-expanded="true" aria-controls="collapse-{{.Service.Name}}">
+                                {{.Service.Name}}
+                            </button>
+                            <i class="fa fa-times text-white" style="float: right;line-height: 1.8;" aria-hidden="true"></i>
                     {{else}}
                     <div class="card-header bg-light border-light" id="heading-{{.Service.Name}}">
+                        <h5 class="m-0">
+                            <button class="btn btn-link text-dark font-weight-bold pl-0 pr-0" style="overflow: hidden;text-overflow: ellipsis;max-width: 93%;" data-toggle="collapse" data-target="#collapse-{{.Service.Name}}" aria-expanded="true" aria-controls="collapse-{{.Service.Name}}">
+                                {{.Service.Name}} 
+                            </button>
+                            <i class="fa fa-clock-o" style="float: right;line-height: 1.8;" aria-hidden="true"></i>
                     {{end}}
                     {{end}}
                     {{if eq .State "degraded"}}
-                    <div class="card-header bg-warning border-light" id="heading-{{.Service.Name}}">
-                    {{end}}
+                    <div class="card-header bg-warning border-warning" id="heading-{{.Service.Name}}">
                         <h5 class="m-0">
-                            <button class="btn btn-link text-white font-weight-bold" style="overflow: hidden;text-overflow: ellipsis;max-width: 100%;" data-toggle="collapse" data-target="#collapse-{{.Service.Name}}" aria-expanded="true" aria-controls="collapse-{{.Service.Name}}">
-                                {{.Service.Name}}
-                            </button>
+                                <button class="btn btn-link text-white font-weight-bold pl-0 pr-0" style="overflow: hidden;text-overflow: ellipsis;max-width: 93%;" data-toggle="collapse" data-target="#collapse-{{.Service.Name}}" aria-expanded="true" aria-controls="collapse-{{.Service.Name}}">
+                                    {{.Service.Name}} <i class="fa fa-times" aria-hidden="true"></i>
+                                </button>
+                                <i class="fa fa-exclamation-triangle text-white" style="float: right;line-height: 1.8;" aria-hidden="true"></i>
+                    {{end}}
                         </h5>
                     </div>
         
