--- a/cmd/health-aggregator/templates/nschecks.html
+++ b/cmd/health-aggregator/templates/nschecks.html
@@ -5,6 +5,22 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="https://use.fontawesome.com/2390d22bcf.js"></script>
+        <script>
+            $(function () {
+                $('[data-toggle="tooltip"]').tooltip()
+            })
+        </script>
+        <style>
+            .check-info {
+                font-size: 0.8em;
+                padding-bottom: 10px;
+                padding-top: 5px;
+            }
+            .chklabel {
+                width: 50px;
+                font-weight: bold;
+            }
+        </style>
     </head>
     <body>
         <div class="container-fluid d-flex flex-wrap">
@@ -71,13 +87,27 @@
                             <dd>{{.Error}}</dd>
                             {{else}}
                             <dt>Error</dt>
-                            <dd>{{.Error}}</dd>
+                            <samp style="font-size:0.8em">{{.Error}}</samp>
                             {{end}}
                             {{end}}
-                            <dt>Checked At</dt>
-                            <dd>{{.CheckTime}}</dd>
-                            <dt>This State Since</dt>
-                            <dd>{{.StateSince}}</dd>
+                            <hr>
+                            {{ if .Body.Checks}}
+                            <details>
+                                <summary style="padding-bottom: 10px;margin-left: -17px;font-weight: bold;">Checks</summary>
+                                {{range .Body.Checks}}
+                                <dt>{{.Name}}: <span class="badge badge-secondary" style="float:right">{{.Health}}</span></dt>
+                                <div class="check-info">
+                                    <div><span class="chklabel">Output: </span><span class="chkvalue">{{.Output}}</span></div>
+                                    <div><span class="chklabel">Action: </span><span class="chkvalue">{{.Action}}</span></div>
+                                    <div><span class="chklabel">Impact: </span><span class="chkvalue">{{.Impact}}</span></div>
+                                </div>
+                                {{end}}
+                            </details>
+                            {{end}}
+                            <dt>Last Checked</dt>
+                            <dd><a href="#" data-toggle="tooltip" data-placement="top" title="{{.CheckTime}}">{{.HumanisedCheckTime}}</a></dd>
+                            <dt>Entered This State</dt>
+                            <dd><a href="#" data-toggle="tooltip" data-placement="top" title="{{.StateSince}}">{{.HumanisedStateSince}}</a></dd>
                             <a href="/namespaces/{{$.Namespace}}/services/{{.Service.Name}}/checks"class="btn btn-primary">History</a>
                         </div>
                     </div> <!-- end of collapse-{{.Service.Name}} -->
