Checks that time out also appear in red

--- a/cmd/health-aggregator/templates/nschecks.html
+++ b/cmd/health-aggregator/templates/nschecks.html
@@ -75,9 +75,9 @@
                             </button>
                             <i class="fa fa-times text-white" style="float: right;line-height: 1.8;" aria-hidden="true"></i>
                     {{else}}
-                    <div class="card-header bg-light border-light" id="heading-{{.Service.Name}}">
+                    <div class="card-header bg-danger border-danger" id="heading-{{.Service.Name}}">
                         <h5 class="m-0">
-                            <button class="btn btn-link text-dark font-weight-bold pl-0 pr-0" style="overflow: hidden;text-overflow: ellipsis;max-width: 93%;" data-toggle="collapse" data-target="#collapse-{{.Service.Name}}" aria-expanded="true" aria-controls="collapse-{{.Service.Name}}">
+                            <button class="btn btn-link text-white font-weight-bold pl-0 pr-0" style="overflow: hidden;text-overflow: ellipsis;max-width: 93%;" data-toggle="collapse" data-target="#collapse-{{.Service.Name}}" aria-expanded="true" aria-controls="collapse-{{.Service.Name}}">
                                 {{.Service.Name}} 
                             </button>
                             <i class="fa fa-clock-o" style="float: right;line-height: 1.8;" aria-hidden="true"></i>
