Icon colour change

--- a/cmd/health-aggregator/templates/nschecks.html
+++ b/cmd/health-aggregator/templates/nschecks.html
@@ -80,7 +80,7 @@
                             <button class="btn btn-link text-white font-weight-bold pl-0 pr-0" style="overflow: hidden;text-overflow: ellipsis;max-width: 93%;" data-toggle="collapse" data-target="#collapse-{{.Service.Name}}" aria-expanded="true" aria-controls="collapse-{{.Service.Name}}">
                                 {{.Service.Name}} 
                             </button>
-                            <i class="fa fa-clock-o" style="float: right;line-height: 1.8;" aria-hidden="true"></i>
+                            <i class="fa fa-clock-o text-white" style="float: right;line-height: 1.8;" aria-hidden="true"></i>
                     {{end}}
                     {{end}}
                     {{if eq .State "degraded"}}
