Added auto-refresh 30s and option to provide required zoom level as a query param e.g. ?zoom=1.5

--- a/internal/templates/nschecks.html
+++ b/internal/templates/nschecks.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta http-equiv="refresh" content="30"/>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -54,7 +55,7 @@
             }
         </style>
     </head>
-    <body>
+    <body style="zoom: {{.Zoom}}">
         <div class="container-fluid d-flex flex-wrap">
             {{range .Checks}}
             <div id="accordion-{{.Service.Name}}" class="chkcolumn w-25 m-0">
