--- a/internal/templates/nschecks.html
+++ b/internal/templates/nschecks.html
@@ -56,7 +56,7 @@
         </style>
     </head>
     <body style="zoom: {{.Zoom}}">
-        <div class="container-fluid d-flex flex-wrap">
+        <div class="container-fluid d-flex flex-wrap" style="padding:0px !important;">
             {{range .Checks}}
             <div id="accordion-{{.Service.Name}}" class="chkcolumn w-25 m-0">
                 {{if eq .AggregatedState "healthy"}}
