--- a/internal/templates/nschecks.html
+++ b/internal/templates/nschecks.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta http-equiv="refresh" content="30"/>
+        <!-- meta http-equiv="refresh" content="30"/ -->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -31,7 +31,13 @@
             }
             .chkcolumn {
                 min-width: 350px;
+                width: 25%;
             }
+            {{if eq .BigScreen true}}
+            .chkcolumn.bigscreen {
+                width: 33% !important;
+            }
+            {{end}}
             details summary::-webkit-details-marker {
                 font-size:0;
             }
@@ -53,12 +59,20 @@
             .degraded {
                 background-color: #ffc107;
             }
+            {{if eq .BigScreen true}}
+            button.bigscreen {
+                font-size: 1.7em;
+            }
+            i.bigscreen {
+                font-size: 1.7em;
+            }
+            {{end}}
         </style>
     </head>
     <body style="zoom: {{.Zoom}}">
         <div class="container-fluid d-flex flex-wrap" style="padding:0px !important;">
             {{range .Checks}}
-            <div id="accordion-{{.Service.Name}}" class="chkcolumn w-25 m-0">
+            <div id="accordion-{{.Service.Name}}" class="chkcolumn m-0 bigscreen">
                 {{if eq .AggregatedState "healthy"}}
                 <div class="card border-success m-1">
                 <!-- if eq .AggregatedState "healthy" -->
@@ -74,28 +88,28 @@
                     {{if eq .AggregatedState "healthy"}}
                     <div class="card-header bg-success border-success" id="heading-{{.Service.Name}}">
                         <h5 class="m-0">
-                            <button class="btn btn-link text-white font-weight-bold pl-0 pr-0" style="overflow: hidden;text-overflow: ellipsis;max-width: 93%;" data-toggle="collapse" data-target="#collapse-{{.Service.Name}}" aria-expanded="true" aria-controls="collapse-{{.Service.Name}}">
+                            <button class="btn btn-link text-white pl-0 pr-0 bigscreen" style="overflow: hidden;text-overflow: ellipsis;max-width: 90%;" data-toggle="collapse" data-target="#collapse-{{.Service.Name}}" aria-expanded="true" aria-controls="collapse-{{.Service.Name}}">
                                 {{.Service.Name}}
                             </button>
-                            <i class="fa fa-check text-white" style="float: right;line-height: 1.8;" aria-hidden="true"></i>
+                            <i class="fa fa-check text-white bigscreen" style="float: right;line-height: 1.8;" aria-hidden="true"></i>
                     <!-- if eq .AggregatedState "healthy" -->
                     {{end}}
                     {{if eq .AggregatedState "unhealthy"}}
                     <div class="card-header bg-danger border-danger" id="heading-{{.Service.Name}}">
                         <h5 class="m-0">
-                            <button class="btn btn-link text-white font-weight-bold pl-0 pr-0" style="overflow: hidden;text-overflow: ellipsis;max-width: 93%;" data-toggle="collapse" data-target="#collapse-{{.Service.Name}}" aria-expanded="true" aria-controls="collapse-{{.Service.Name}}">
+                            <button class="btn btn-link text-white pl-0 pr-0 bigscreen" style="overflow: hidden;text-overflow: ellipsis;max-width: 90%;" data-toggle="collapse" data-target="#collapse-{{.Service.Name}}" aria-expanded="true" aria-controls="collapse-{{.Service.Name}}">
                                 {{.Service.Name}}
                             </button>
-                            <i class="fa fa-times text-white" style="float: right;line-height: 1.8;" aria-hidden="true"></i>
+                            <i class="fa fa-times text-white bigscreen" style="float: right;line-height: 1.8;" aria-hidden="true"></i>
                     <!-- if eq .AggregatedState "unhealthy" -->
                     {{end}}
                     {{if eq .AggregatedState "degraded"}}
                     <div class="card-header bg-warning border-warning" id="heading-{{.Service.Name}}">
                         <h5 class="m-0">
-                                <button class="btn btn-link text-white font-weight-bold pl-0 pr-0" style="overflow: hidden;text-overflow: ellipsis;max-width: 93%;" data-toggle="collapse" data-target="#collapse-{{.Service.Name}}" aria-expanded="true" aria-controls="collapse-{{.Service.Name}}">
+                                <button class="btn btn-link text-white pl-0 pr-0 bigscreen" style="overflow: hidden;text-overflow: ellipsis;max-width: 90%;" data-toggle="collapse" data-target="#collapse-{{.Service.Name}}" aria-expanded="true" aria-controls="collapse-{{.Service.Name}}">
                                     {{.Service.Name}} <i class="fa fa-times" aria-hidden="true"></i>
                                 </button>
-                                <i class="fa fa-exclamation-triangle text-white" style="float: right;line-height: 1.8;" aria-hidden="true"></i>
+                                <i class="fa fa-exclamation-triangle text-white bigscreen" style="float: right;line-height: 1.8;" aria-hidden="true"></i>
                     <!-- if eq .AggregatedState "degraded" -->
                     {{end}}
                         </h5>
