--- a/internal/templates/nschecks.html
+++ b/internal/templates/nschecks.html
@@ -28,6 +28,7 @@
             .chkcolumn {
                 min-width: 350px;
                 width: 25%;
+                animation: expand .5s ease-in-out;
             }
             {{if eq .BigScreen true}}
             .chkcolumn.bigscreen {
@@ -63,6 +64,26 @@
                 font-size: 1.7em;
             }
             {{end}}
+            {{if eq .Compact true}}
+            .card-header.compact {
+                padding-left: 5px !important;
+                padding-right: 5px !important;
+            }
+            .card-header.compact > h5 > i {
+                line-height: 1.3 !important;
+            }
+            .card-header.compact > h5 > button {
+                padding-top: 0 !important;
+                padding-bottom: 0 !important;
+                line-height: 1.3;
+            }
+            {{end}}
+            .card-header {
+                padding: 0rem 1.25rem !important;
+            }
+            .btn {
+                text-align: left;
+            }
             .corner-ribbon{
                 width: 200px;
                 z-index: 999;
@@ -99,59 +120,45 @@
 
             .corner-ribbon.blue{background: #39d;}
             .corner-ribbon.red{background: #e43;}
-            #progressBar {
+            .bar {
+                height: 8px;
                 width: 100%;
-                margin: 0px auto;
-                height: 6px;
                 position: fixed;
-                bottom: 0;
                 background: white;
                 z-index: 99;
+                bottom: 0;
+            }
+            .in {
+                animation: fill 60s linear 1;
+                height: 4px;
+                bottom: 0;
+                position: absolute;
+                background-color: #39d;
             }
 
-            #progressBar div {
-                height: 4px;
-                text-align: right;
-                padding: 0 10px;
-                position: absolute;
-                bottom: 0;
-                width: 100%;
-                background-color:#39d;
-                box-sizing: border-box;
+            @keyframes fill {
+                0% {
+                    width: 0%;
+                }
+                100% {
+                    width: 100%;
+                }
             }
         </style>
-        <script type = "text/javascript">
-            
-            function progress(timeleft, timetotal, $element) {
-                var progressBarWidth = timeleft * $element.width() / timetotal;
-                if (timeleft == 60) {
-                    $element.find('div').width('100%');
-                } else {
-                    $element.find('div').animate({ width: progressBarWidth }, 1000, "linear");
-                }
-                if(timeleft > 0) {
-                    setTimeout(function() {
-                        progress(timeleft - 1, timetotal, $element);
-                    
-                    }, 1000);
-                }
-            };
-            
-            </script>
     </head>
     <body style="zoom: {{.Zoom}}">
-        <div id="progressBar">
-            <div class="bar"></div>
+        <div class="bar">
+            <div class="in"></div>
         </div>
         <div id="env-ribbon" class="corner-ribbon top-right sticky"></div>
         <div id="checks-container" class="container-fluid d-flex flex-wrap" style="padding:0 !important;">
-
+            
         </div>
     </body>
     <footer>
             <script type="text/javascript">
                 getData()
-                setInterval(getData, 60000);
+                //setInterval(getData, 60000);
                 function getParameterByName(name, url) {
                     if (!url) url = window.location.href;
                     name = name.replace(/[\[\]]/g, "\\$&");
@@ -181,10 +188,13 @@
                     }
                 }
                 function getData() {
-                    
+                    var elm = document.getElementsByClassName("in")[0];
+                    var newone = elm.cloneNode(true);
+                    elm.parentNode.replaceChild(newone, elm);
                     var namespace = '{{.Namespace}}';
                     var env = getParameterByName('env');
                     var ribbon = document.getElementById("env-ribbon");
+                    
                     ribbon.innerHTML = env;
                     if (env == 'prod') {
                         ribbon.classList.add("red");
@@ -206,10 +216,10 @@
                               success: function(data){
         
                                 document.getElementById("checks-container").innerHTML = '';
-                                progress(60, 60, $('#progressBar'));
+                                
                                 if (data.length == 0) {
                                     document.getElementById("checks-container").innerHTML = '';
-                                    progress(60, 60, $('#progressBar'));
+                                    
                                     $('#checks-container').append('<div class="jumbotron jumbotron-fluid" style="width: 100%;top: 100px;position: absolute;">' +
                                         '<div class="container">' +
                                         '<h1 class="display-4">No checks found</h1>' +
@@ -249,7 +259,7 @@
                                     
                                     '<div id="accordion-' + serviceName + '" class="chkcolumn m-0 bigscreen">' +
                                     '<div class="card border-' + bootstrapColour + ' m-1">' +
-                                    '<div class="card-header bg-'+bootstrapColour+' border-'+bootstrapColour+'" id="heading-'+serviceName+'">' +
+                                    '<div class="card-header compact bg-'+bootstrapColour+' border-'+bootstrapColour+'" id="heading-'+serviceName+'">' +
                                     '<h5 class="m-0">' +
                                     '<button class="btn btn-link text-white pl-0 pr-0 bigscreen" style="overflow: hidden;text-overflow: ellipsis;max-width: 90%;" data-toggle="collapse" data-target="#collapse-'+serviceName+'" aria-expanded="true" aria-controls="collapse-'+serviceName+'">'+serviceName+'</button>' +
                                     '<i class="fa '+icon+' text-white bigscreen" style="float: right;line-height: 1.8;" aria-hidden="true"></i>');
@@ -343,10 +353,11 @@
                                 '</div> <!-- end of collapse-'+serviceName+' -->');
                                     
                                 });
+
                               },
                               error: function(xhr, status, error){
                                 document.getElementById("checks-container").innerHTML = '';
-                                progress(60, 60, $('#progressBar'));
+                                
                                 $('#checks-container').append('<div class="jumbotron jumbotron-fluid" style="width: 100%;top: 100px;position: absolute;">' +
                                     '<div class="container">' +
                                     '<h1 class="display-4">Unable to get health data!</h1>' +
