--- a/internal/templates/nschecks.html
+++ b/internal/templates/nschecks.html
@@ -158,7 +158,7 @@
     <footer>
             <script type="text/javascript">
                 getData()
-                //setInterval(getData, 60000);
+                setInterval(getData, 60000);
                 function getParameterByName(name, url) {
                     if (!url) url = window.location.href;
                     name = name.replace(/[\[\]]/g, "\\$&");
